[project]
name = "ComfyUI-Conditioning-Rebalance"
description = "Conditioning optimizer nodes offering IP-Adapter-like features for Krea 2 image reference editing along with bypassing the built in quality diluation from the trained safety filter and also works as a means to unfilter the model."
version = "1.3.1"
license = { file = "LICENSE.txt" }
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/nova452/ComfyUI-ConditioningKrea2Rebalance"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/nova452/ComfyUI-ConditioningKrea2Rebalance/wiki"
"Bug Tracker" = "https://github.com/nova452/ComfyUI-ConditioningKrea2Rebalance/issues"

[tool.comfy]
PublisherId = "nova452"
DisplayName = "ComfyUI-Conditioning-Rebalance"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

